# agentic-difusion

./: .coveragerc  .gitignore  README.md  benchmark_dataset.json  hello_world.py  hello_world_cli.py  pyproject.toml  pytest.ini  requirements.txt  run_code_generation_with_fixes.py  setup.py  test_code_generation_error_handling.py  test_code_generation_fix.py  test_embeddings_dimension_fix.py  test_residual_block_fix.py
agentic_diffusion/: __main__.py
agentic_diffusion_mcp/: DEVELOPMENT.md  README.md  pyproject.toml  setup.py
agentic_diffusion_mcp/agentic_diffusion_mcp/: __init__.py  logging_config.py
agentic_diffusion_mcp/agentic_diffusion_mcp/server/: __init__.py  app.py
agentic_diffusion_mcp/src/: __init__.py  config.py
agentic_diffusion_mcp/src/client/: app.py
agentic_diffusion_mcp/src/server/: app.py
config/: adaptdiffuser.yaml  adaptdiffuser_cpu.yaml  adaptdiffuser_gpu.yaml  development.yaml  test_cpu.yaml  test_cpu_with_reward.yaml  test_gpu.yaml  test_gpu_with_reward.yaml
docs/: FAQ.md  acceptance_criteria.md  agentic_diffusion_overview.md  architecture.md  code_diffusion_dimension_fix.md  code_diffusion_interface_fix.md  code_generation_integration.md  detailed_architecture.md  domain_model.md  extensibility.md  implementation_plan.md  noise_scheduler_limitations.md  quickstart.md  requirements.md  setup_and_env.md  system_overview.md  usage_examples.md
research/: AdaptDiffuser.md  codespace.md  deep-research.md  phase2.md
scripts/: README_adaptdiffuser_adapt_tests.md  README_adaptdiffuser_cli.md  README_adaptdiffuser_cli_parameters.md  README_adaptdiffuser_generate_tests.md  README_adaptdiffuser_improve_parameters.md  adaptdiffuser_generate_example.py  complete_code_generation.py  inject_reward_model_support.py  mock_adaptdiffuser_reward.py  register_reward_model.py  register_reward_model_implementation.py  run_adaptdiffuser.sh  run_adaptdiffuser_adapt_cli_with_mock.sh  run_adaptdiffuser_adapt_tests.sh  run_adaptdiffuser_adapt_tests_with_mock.sh  run_adaptdiffuser_cli_parameters.sh  run_adaptdiffuser_generate_tests.sh  run_adaptdiffuser_improve_parameters.sh  run_adaptdiffuser_tests.sh  run_adaptdiffuser_with_reward.sh  simple_code_generation.py  test_custom_prompt.py  (+13 more)
(+138 files in other folders)
